Added random endpoints, added alias /anything for /echo
